--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>HTML Album Cover</title>
+    <title>The Perfect HTML Album Cover Ever Created</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
+          <h4>PHARRELL WILLIAMS</h4>
+          <h2>HAPPY</h2>
+          <h4>FROM DESPICABLE ME 2</h4>
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
@@ -22,6 +25,10 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>FROM DESPICABLE ME 2</h3>
+        <h1>HAPPY</h1>
+        <h3>WRITTEN BY</h3>
+        <p>PUBLISHED BY <span onclick="window.location='https://PHARRELLWILLIAMS.COM'" style="color:purple">PHARRELLWILLIAMS.COM</span></p>
 
         <!-- Level 1 'HAPPY' Header -->
 
@@ -30,12 +37,16 @@
         <!-- pararaph text 'PUBLISHED BY...' -->
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span onclick="window.location='https://COLUMBIARECORDS.COM'">COLUMBIARECORDS.COM</span>
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia logo">
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span onclick="window.location='https://COLUMBIARECORDS.COM'">COLUMBIARECORDS.COM</span>
 
         <br>
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony logo">
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
